[gd_scene load_steps=5 format=2]

[ext_resource path="res://Experimental/Net/NetGame.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="ProceduralSky" id=2]
sky_energy = 0.33

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )
background_color = Color( 0.72549, 0.290196, 0.290196, 1 )

[node name="NetGame" type="Spatial"]
script = ExtResource( 1 )

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 2.48791, 0, 0, 0, 0.270874, 0, 0, 0, 2.48791, 0, -0.286329, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.752081, 0.65907, 0, -0.65907, 0.752081, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.90109 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.989727, -0.103623, 0.098502, -0.0469528, 0.415174, 0.90853, -0.13504, -0.903822, 0.406043, 0.193325, 5.50288, 4.55456 )
light_energy = 0.39
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="PlayerPos1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.36395, 1.05986, 0 )

[node name="PlayerPos2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54755, 1.05986, 0 )
